# machine_learning

./: .gitignore  Cargo.toml
datasets/boston/: test_data.csv  train_data.csv  train_data_enc.csv
datasets/cancer/: test_data.csv  train_data.csv  train_data_enc.csv
datasets/heart/: test_data.csv  train_data.csv
datasets/iris/: test_data.csv  test_data_enc.csv  train_data.csv  train_data_enc.csv
datasets/landcover/: data.csv  test_data.csv  test_data_enc.csv  test_data_xg.csv  train_data.csv  train_data_enc.csv  train_data_xg.csv
datasets/titanic/: data.csv  data_xg.csv  test_data.csv  test_data_enc.csv  train_data.csv  train_data_enc.csv
datasets/urban/: data.csv  data_xg.csv  test_data.csv  test_data_enc.csv  test_data_xg.csv  train_data.csv  train_data_enc.csv  train_data_xg.csv
src/: data.ipynb  main.rs  notes.txt  scratch.py  test.py
src/ml/: data_processing.rs  mod.rs  qs.rs  smrtcore.rs  tangram_wrapper.rs  xgbindings.rs
tangram_table/: .cargo_vcs_info.json  Cargo.toml  load.rs
