[package]
name = "machine_learning"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tangram = {git = "https://github.com/tangramdotdev/tangram/", rev = "6bb3300e411e268f7be9f25d1c5e6811abae950f"}
tangram_table = "*"
tangram_tree = "*"
tangram_zip = "*"
tangram_kill_chip = "*"
tangram_metrics = "*"
# xgboost = "*"
# xgboost-bindings = {path = "xgtest"}
xgboost-bindings = {git = "https://github.com/MarWeUMR/xgboost-bindings"}
polars = {version="*", features=["ndarray", "strings", "rows", "fmt", "to_dummies"]}
pyo3= {version="*", features=["auto-initialize"]}
ndarray = "*"
# smartcore = {version = "*"} 
num-traits = "*"
serde = { version = "*", features = ["derive"] }
serde_json = "1"
eval-metrics = "*"
